# consensus-lean4

./: .gitignore  CLAUDE.md  ConsensusLean4.lean  README.md  lake-manifest.json  lakefile.lean
ConsensusLean4/: FastPath.lean  Ffi.lean  Funs.lean  FunsExternal.lean  FunsExternal_Template.lean  Types.lean
docs/: ffi-feasibility.md  ffi-implementation-plan.md  ffi-investigation-notes.md  rust-ffi-benchmarks.md
rust/: Cargo.toml
rust-ffi/: Cargo.toml  build.rs
rust-ffi/src/: main.rs
rust/bench/: Cargo.toml
rust/ffi/: Cargo.toml
