[package]
name = "consensus-bench"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
consensus-ffi = { path = "../ffi" }
rand = "0.8"
rand_chacha = "0.3"
memory-stats = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "state_transition"
harness = false

[[bench]]
name = "fork_choice"
harness = false
